--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,16 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
+    background-color: #6b0480d0;
+    color: #f3f2f2;
+}
+
+form {
+    border: 3px solid #f3f2f2;
+    border-radius: 5px;
+    padding: 1rem;
+    box-shadow: 4px 4px;
+    margin: 2rem 0 4rem 0;
 }
 
 div {
