Ajustando o formulário e o SB

--- a/styles.css
+++ b/styles.css
@@ -76,4 +76,8 @@ fieldset.input-data-de-nascimento .input-estado-civil .imput-CPF .input-genero {
     width: 41rem;
 }
 
+button {
+    width: 6rem;
+}
+
 
